# scope-rx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
scope_rx/: __init__.py  cli.py
scope_rx/core/: __init__.py  base.py  scope.py  wrapper.py
scope_rx/methods/: __init__.py
scope_rx/methods/attention/: __init__.py  flow.py  raw.py  rollout.py
scope_rx/methods/gradient/: __init__.py  gradcam.py  gradcam_plusplus.py  guided_backprop.py  integrated_gradients.py  layercam.py  scorecam.py  smoothgrad.py  vanilla.py
scope_rx/methods/model_agnostic/: __init__.py  kernel_shap.py  lime_explainer.py
scope_rx/methods/perturbation/: __init__.py  meaningful_perturbation.py  occlusion.py  rise.py
scope_rx/metrics/: __init__.py  faithfulness.py  sensitivity.py  stability.py
scope_rx/utils/: __init__.py  postprocessing.py  preprocessing.py  tensor.py
scope_rx/visualization/: __init__.py  export.py  plots.py
tests/: test_core.py  test_gradient_methods.py  test_metrics.py  test_perturbation_methods.py  test_utils_new.py  test_visualization_new.py
